--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,50 +1,62 @@
-.intro-container{
-  height: 100vh;
-  display: flex;
-  width: 100vw;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  z-index: 2;
-  background-image: url("/public/peakpx.jpg");
-  object-fit: cover;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  width: auto;
-}
-body{
-  
-  
-}
-h1{
-  z-index: 9;
-  font-size: 100px;
+.intro-container {
+    height: 100vh;
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 2;
+    background-image: url("/public/peakpx.jpg");
+    object-fit: cover;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width: auto;
 }
 
-.filter{
-  background: rgba(0, 0, 0, 0.6);
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 5;
-}
-.btn-container{
-  display: flex;
-  width: 60%;
-  justify-content: space-around;
-  z-index: 7;
+body {}
+
+h1 {
+    z-index: 9;
+    font-size: 100px;
 }
 
-
-.signin{
-  background: none;
-  border: 1px solid white;
-  color: white;
-  width: 100px;
-  height: 50px;
+.filter {
+    background: rgba(0, 0, 0, 0.6);
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
 }
 
+.form-container {
+    width: 30%;
+    margin: auto;
+}
+
+.btn-container {
+    display: flex;
+    width: 20%;
+    justify-content: space-around;
+    z-index: 7;
+}
+
+.signin {
+    background: none;
+    border: 1px solid white;
+    color: white;
+    height: 50px;
+    width: 120px;
+    font-weight: bold;
+}
+
+.loginbtn {
+    font-weight: bold;
+    background: #fff;
+    color: black;
+    height: 50px;
+    width: 120px;
+}
