--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,28 +1,31 @@
-.navbar{
-  height: 50px;
-  background-color: #003580;
-  display: flex;
-  justify-content: center;
+.navbar {
+    width: 80%;
+    margin: auto;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    height: 50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
 }
 
-.navContainer{
-  width: 100%;
-  max-width: 1024px;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.navContainer {
+    width: 100%;
+    max-width: 1024px;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.logo{
-  font-weight: 500;
-  
+.logo {
+    font-weight: 500;
 }
 
-.navButton{
-  margin-left: 20px;
-  border: none;
-  padding: 5px 10px;
-  cursor: pointer;
-  color: #003580;
+.navButton {
+    margin-left: 20px;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    color: #003580;
 }
