--- a/src/components/seats/Seats.css
+++ b/src/components/seats/Seats.css
@@ -1,16 +1,34 @@
-.main-container{
-  display: flex;
-  justify-content: center;
-
-
+.main-container {
+    display: flex;
+    justify-content: center;
 }
-.bookings{
-  text-align: center;
-  font-size: 30px;
+
+.bookings {
+    text-align: center;
+    font-size: 30px;
 }
-.seat-container{
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  
-  margin: 20px;
+
+.seat-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    margin: 20px;
+}
+
+.searchbar {
+    width: 65%;
+    height: 60px;
+    display: flex;
+    justify-content: space-around;
+    margin: 20px auto;
+}
+
+.datePicker {
+    width: 100%;
+}
+
+.searchbar input {
+    height: 30px;
+    border-radius: 10px;
+    padding: 10px;
+    width: 30%;
 }
